include/coquic/ffi/core.h

typedef struct coquic_result coquic_result_t;
typedef uint64_t coquic_route_handle_t;
typedef uint64_t coquic_stream_id_t;
typedef uint64_t coquic_time_us_t;
typedef uint8_t coquic_status_t;
typedef uint8_t coquic_connection_input_kind_t;
typedef struct coquic_bytes_view {
    const uint8_t *data;
    size_t length;
} coquic_bytes_view_t;
typedef struct coquic_bytes {
    const uint8_t *data;
    size_t length;
} coquic_bytes_t;
typedef struct coquic_optional_route_handle {
    uint8_t has_value;
    coquic_route_handle_t value;
} coquic_optional_route_handle_t;
typedef struct coquic_optional_stream_id {
    uint8_t has_value;
    coquic_stream_id_t value;
} coquic_optional_stream_id_t;
typedef struct coquic_send_stream_data {
    size_t size;
    coquic_stream_id_t stream_id;
    coquic_bytes_t bytes;
    uint8_t fin;
    int32_t priority;
} coquic_send_stream_data_t;
typedef struct coquic_send_datagram_data {
    size_t size;
    coquic_bytes_t bytes;
    int32_t priority;
} coquic_send_datagram_data_t;
typedef struct coquic_reset_stream {
    size_t size;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_reset_stream_t;
typedef struct coquic_stop_sending {
    size_t size;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_stop_sending_t;
typedef struct coquic_close_connection {
    size_t size;
    uint64_t application_error_code;
    const char *reason_phrase;
    size_t reason_phrase_length;
} coquic_close_connection_t;
typedef struct coquic_request_connection_migration {
    size_t size;
    coquic_route_handle_t route_handle;
    coquic_migration_reason_t reason;
    coquic_bytes_t address_validation_identity;
} coquic_request_connection_migration_t;
typedef struct coquic_connection_input {
    coquic_connection_input_kind_t kind;
    union {
        coquic_send_stream_data_t send_stream;
        coquic_send_datagram_data_t send_datagram;
        coquic_reset_stream_t reset_stream;
        coquic_stop_sending_t stop_sending;
        coquic_close_connection_t close;
        coquic_request_connection_migration_t request_migration;
    } as;
} coquic_connection_input_t;