bindings/rust/coquic/src/ffi.rs


    pub fn coquic_http3_server_create(
        config: *const coquic_http3_server_config_t,
        out_server: *mut *mut coquic_http3_server_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_destroy(server: *mut coquic_http3_server_t);
    pub fn coquic_http3_server_on_quic_result(
        server: *mut coquic_http3_server_t,
        result: *const coquic_result_t,
        now: coquic_time_us_t,
        out_update: *mut *mut coquic_http3_server_update_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_poll(
        server: *mut coquic_http3_server_t,
        now: coquic_time_us_t,
        out_update: *mut *mut coquic_http3_server_update_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_has_failed(server: *const coquic_http3_server_t) -> u8;
    pub fn coquic_http3_server_update_destroy(update: *mut coquic_http3_server_update_t);
    pub fn coquic_http3_server_update_connection_input_count(
        update: *const coquic_http3_server_update_t,
    ) -> usize;
    pub fn coquic_http3_server_update_connection_input_at(
        update: *const coquic_http3_server_update_t,
        index: usize,
        out_input: *mut coquic_connection_input_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_update_request_cancelled_count(
        update: *const coquic_http3_server_update_t,
    ) -> usize;
    pub fn coquic_http3_server_update_request_cancelled_at(
        update: *const coquic_http3_server_update_t,
        index: usize,
        out_event: *mut coquic_http3_server_request_cancelled_event_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_update_has_pending_work(
        update: *const coquic_http3_server_update_t,
    ) -> u8;
    pub fn coquic_http3_server_update_terminal_failure(
        update: *const coquic_http3_server_update_t,
    ) -> u8;
    pub fn coquic_http3_server_update_handled_local_error(
        update: *const coquic_http3_server_update_t,
    ) -> u8;

    pub fn coquic_http3_request_view_header_at(
        request: *const coquic_http3_request_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_request_view_trailer_at(
        request: *const coquic_http3_request_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_request_head_view_header_at(
        head: *const coquic_http3_request_head_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_response_view_interim_head_at(
        response: *const coquic_http3_response_view_t,
        index: usize,
        out_head: *mut coquic_http3_response_head_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_response_view_header_at(
        response: *const coquic_http3_response_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_response_view_trailer_at(
        response: *const coquic_http3_response_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_response_head_view_header_at(
        head: *const coquic_http3_response_head_view_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
    pub fn coquic_http3_server_request_cancelled_view_trailer_at(
        event: *const coquic_http3_server_request_cancelled_event_t,
        index: usize,
        out_field: *mut coquic_http3_field_view_t,
    ) -> coquic_status_t;
}

impl coquic_bytes_t {
    pub const fn empty() -> Self {
        Self {
            data: std::ptr::null(),
            length: 0,
        }
    }
}

impl coquic_bytes_view_t {
    pub const fn empty() -> Self {
        Self {
            data: std::ptr::null(),
            length: 0,
        }
    }
}

impl coquic_optional_route_handle_t {
    pub const fn none() -> Self {
        Self {
            has_value: 0,
            value: 0,
        }
    }
}

impl coquic_optional_stream_id_t {
    pub const fn none() -> Self {
        Self {
            has_value: 0,
            value: 0,
        }
    }
}

impl coquic_http3_optional_u64_t {
    pub const fn none() -> Self {
        Self {
            has_value: 0,
            value: 0,
        }
    }
}

impl Default for coquic_http3_error_t {
    fn default() -> Self {
        Self {
            code: COQUIC_HTTP3_ERROR_NO_ERROR,
            stream_id: coquic_optional_stream_id_t::none(),
            detail_buffer: std::ptr::null_mut(),
            detail_buffer_capacity: 0,
            detail_length: 0,
            detail_truncated: 0,
        }
    }
}
